# faultmesher

./: README.md  pyproject.toml
examples/example_1/: config,yaml  run.py
examples/example_2/: config.yaml  run.py
faultmesher/: __init__.py  cli.py  fault.py  gmsh_backend.py  mesh.py
tests/: test_cli.py  test_fault.py  test_mesh_fault.py
